(redux): wip on posting a comic into the db

--- a/demo/redux/fonts/fonts.scss
+++ b/demo/redux/fonts/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Graphik-Bold;
+  font-family: GraphikBold;
   src: url("graphik-bold-webfont.eot");
   src: local('x'),
   url("graphik-bold-webfont.woff") format('woff'),
@@ -7,7 +7,7 @@
   url("graphik-bold-webfont.svg") format('svg');
 }
 @font-face {
-  font-family: Graphik-Light;
+  font-family: GraphikLight;
   src: url("graphik-light-webfont.eot");
   src: local('x'),
   url("graphik-light-webfont.woff") format('woff'),
@@ -15,7 +15,7 @@
   url("graphik-light-webfont.svg") format('svg');
 }
 @font-face {
-  font-family: Graphik-Regular;
+  font-family: GraphikReg;
   src: url("graphik-regular-webfont.eot");
   src: local('x'),
   url("graphik-regular-webfont.woff") format('woff'),
